CPP_Files = \
Alignment.cpp\
AlignmentSymbol.cpp\
CircularAlignment.cpp\
ErrorClasses.cpp\
ExtendedFasta.cpp\
GenomeAlphabet.cpp\
main.cpp\
MatrixHelper.cpp\
MetaCircularAlignment.cpp\
MultipleAlignment.cpp\
MultipleCircularAlignment.cpp\
MultipleMetaCircularAlignment.cpp\
Output.cpp\
ScoringModel.cpp\
RotatedSequence.cpp\
MetaRotatedSequence.cpp\
VertebrateMitochondrialGenomeAlphabet.cpp

H_Files =\
Alignment.h\
AlignmentSymbol.h\
CircularAlignment.h\
ErrorClasses.h\
ExtendedFasta.h\
GenomeAlphabet.h\
MatrixHelper.h\
MetaCircularAlignment.h\
MultipleAlignment.h\
MultipleCircularAlignment.h\
MultipleMetaCircularAlignment.h\
Output.h\
ScoringModel.h\
RotatedSequence.h\
MetaRotatedSequence.h\
VertebrateMitochondrialGenomeAlphabet.h

bin_PROGRAMS=CircalPP
CircalPP_SOURCES= $(CPP_Files) $(H_Files)
