CPP_Files = \
Alignment.cpp\
AlignmentSymbol.cpp\
CircularAlignment.cpp\
ErrorClasses.cpp\
ExtendedFasta.cpp\
GenomeAlphabet.cpp\
main.cpp\
MatrixHelper.cpp\
PseudoCircularAlignment.cpp\
MultipleAlignment.cpp\
MultipleCircularAlignment.cpp\
MultiplePseudoCircularAlignment.cpp\
Output.cpp\
ScoringModel.cpp\
RotatedSequence.cpp\
PseudoRotatedSequence.cpp\
VertebrateMitochondrialGenomeAlphabet.cpp\
RandomSequence.cpp

H_Files =\
Alignment.h\
AlignmentSymbol.h\
CircularAlignment.h\
ErrorClasses.h\
ExtendedFasta.h\
GenomeAlphabet.h\
MatrixHelper.h\
PseudoCircularAlignment.h\
MultipleAlignment.h\
MultipleCircularAlignment.h\
MultiplePseudoCircularAlignment.h\
Output.h\
ScoringModel.h\
RotatedSequence.h\
PseudoRotatedSequence.h\
VertebrateMitochondrialGenomeAlphabet.h\
RandomSequence.h

bin_PROGRAMS=CircalPP
CircalPP_SOURCES= $(CPP_Files) $(H_Files)
