CPP_Files = \
Alignment.cpp\
AlignmentFactory.cpp\
AlignmentSymbol.cpp\
CircularAlignmentFactory.cpp\
ErrorClasses.cpp\
CorrectedFasta.cpp\
WhitespaceFasta.cpp\
GenomeAlphabet.cpp\
CircalPP.cpp\
MatrixHelper.cpp\
PseudoCircularAlignmentFactory.cpp\
MultipleAlignmentFactory.cpp\
MultipleCircularAlignmentFactory.cpp\
MultiplePseudoCircularAlignmentFactory.cpp\
Output.cpp\
ScoringModel.cpp\
RotatedSequence.cpp\
PseudoRotatedSequence.cpp\
VertebrateMitochondrialGenomeAlphabet.cpp\
RandomSequence.cpp

H_Files =\
Alignment.h\
AlignmentFactory.h\
AlignmentSymbol.h\
CircularAlignmentFactory.h\
ErrorClasses.h\
CorrectedFasta.h\
WhitespaceFasta.h\
GenomeAlphabet.h\
MatrixHelper.h\
PseudoCircularAlignmentFactory.h\
MultipleAlignmentFactory.h\
MultipleCircularAlignmentFactory.h\
MultiplePseudoCircularAlignmentFactory.h\
Output.h\
ScoringModel.h\
RotatedSequence.h\
PseudoRotatedSequence.h\
VertebrateMitochondrialGenomeAlphabet.h\
RandomSequence.h

bin_PROGRAMS=CircalPP
CircalPP_SOURCES= $(CPP_Files) $(H_Files)
